--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>To You!</h3>
-                        <h2>Happy birthday 🥳🎂🥳 Madhumitha nee keta gift thara mudiyala athuku sorry first uh epovum happy ah iru ellathukum alaama face pannu kovatha kami pannu unnaku pudichatha sei na support panra nee thookathula pesurathu ennaku romba pudikum na ipo sonnanu atha pannama irukatha ethachi sollanum na apovehh solliru na purichipen un birthday matum illa unkuda irukura ella moment um happy moment tha once again happy birthday my wife .
+                        <h2>Happy birthday 🥳🎂🥳 Madhumitha nee keta gift thara mudiyala athuku sorry first uh epovum happy ah iru ellathukum alaama face pannu kovatha kami pannu unnaku pudichatha sei na support panra nee thookathula pesurathu ennaku romba pudikum na ipo sonnanu atha pannama irukatha ethachi sollanum na apovehh solliru na purichipen un birthday matum illa unkuda irukura ella moment um happy moment tha  .
                         </h2>
 
                         <div class="imageCute2">
